--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@ body {
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-content">
-            <div class="hero-badge">年商30億円以上企業のマーケ・人事・経営企画部門向け</div>
+            <div class="hero-badge">スマホSNS時代に最適化された成果重視の動画マーケティング</div>
             <h1>動画 広告 LP LINE。<br>集客を動かす仕組みを、ワンストップで。</h1>
             <a href="#contact" class="cta-button">無料相談はこちら</a>
         </div>
@@ -1083,3 +1083,4 @@ body {
 </section>
 </body>
 </html>
+
