Tweak hero to dark trust palette; CTA to purple/indigo accent

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ body {
     }
 
     /* Hero Section */
-    .hero {
-        background: linear-gradient(135deg, #1e3c72 0%, #2a5298 50%, #7e22ce 100%);
+    -gradient(180deg, #0b0c10 0%, #111218 100%)
         color: white;
         text-align: center;
         padding: 120px 20px;
@@ -105,14 +104,14 @@ body {
     .cta-button {
         display: inline-block;
         padding: 20px 60px;
-        background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);
+        background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
         color: white;
         text-decoration: none;
         border-radius: 50px;
         font-size: 1.3rem;
         font-weight: bold;
         transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        box-shadow: 0 10px 40px rgba(255,107,107,0.4);
+        box-shadow: 0 10px 40px rgba(79,70,229,0.4);
         position: relative;
         overflow: hidden;
         animation: fadeInUp 1s ease-out 0.6s both;
@@ -135,7 +134,7 @@ body {
 
     .cta-button:hover {
         transform: translateY(-5px) scale(1.05);
-        box-shadow: 0 15px 50px rgba(255,107,107,0.6);
+        box-shadow: 0 15px 50px rgba(79,70,229,0.6);
     }
 
     /* Section Styles */
@@ -715,7 +714,7 @@ body {
 
     /* Final CTA */
     .final-cta {
-        background: linear-gradient(135deg, #ff6b6b 0%, #ee5a6f 100%);
+        background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
         color: white;
         text-align: center;
         padding: 120px 20px;
@@ -1083,4 +1082,5 @@ body {
 </section>
 </body>
 </html>
+
 
