Hero: replace CTA with two buttons and add .cta-group layout

--- a/index.html
+++ b/index.html
@@ -803,7 +803,13 @@ body {
             font-size: 2rem;
         }
     }
-</style>
+    .cta-group {
+        display: flex;
+        gap: 16px;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin-top: 10px;
+    }</style>
 </head>
 <body>
     <!-- Hero Section -->
@@ -811,7 +817,7 @@ body {
         <div class="hero-content">
             <div class="hero-badge">スマホSNS時代に最適化された成果重視の動画マーケティング</div>
             <h1>動画 広告 LP LINE。<br>集客を動かす仕組みを、ワンストップで。</h1>
-            <a href="#contact" class="cta-button">無料相談はこちら</a>
+            <div class="cta-group"><a href="#contact" class="cta-button">無料相談を予約する</a> <a href="#contact" class="cta-button">資料をダウンロードする</a></div>
         </div>
     </section>
 <!-- Problems Section -->
@@ -1082,5 +1088,7 @@ body {
 </section>
 </body>
 </html>
+
+
 
 
